# hk1d_ros2

./: .gitignore  .pre-commit-config.yaml  README.md  hk1d_ros2.repos
.docker/: Dockerfile  README.md
.github/workflows/: ci.yml
hk1d_arduino/force_sensor/ForceSensor/: ForceSensor.ino  testing.ino
hk1d_arduino/force_sensor/testing/ForceSensor/: ForceSensor.ino
hk1d_arduino/force_sensor/testing/hk1d_1ard_force_measure_fast/: hk1d_1ard_force_measure_fast.ino
hk1d_arduino/force_sensor/testing/two_ard_force_measure/: two_ard_force_measure.ino
hk1d_arduino/force_sensor/testing/two_ard_force_measure/two_ards_ethercat/: two_ards_ethercat.ino
hk1d_arduino/force_sensor/testing/two_ard_force_measure_fast/: two_ard_force_measure_fast.ino
hk1d_bringup/: CMakeLists.txt  package.xml
hk1d_bringup/config/: PlotJuggler_layout_ARMPC.xml  force_slave_config.yaml  hk1d_controllers.yaml  maxon_epos3_config.yaml
hk1d_bringup/launch/: hk1d.launch.py
hk1d_bringup_master_follower/: CMakeLists.txt  package.xml
hk1d_bringup_master_follower/config/: hk1d.config.xacro  hk1d_controllers.yaml
hk1d_bringup_master_follower/launch/: hk1d.launch.py
hk1d_bringup_master_follower/ros2_control/: hk1d.r2c_hardware.xacro
hk1d_description/: CMakeLists.txt  package.xml
hk1d_description/config/: hk1d.config.xacro
hk1d_description/gazebo/: hk1d.gazebo.xacro
hk1d_description/ros2_control/: hk1d.r2c_hardware.xacro  hk1d_macro_import_ec_modules.r2c_hardware.xacro  hk1d_master_follower.r2c_hardware copy.xacro
hk1d_description/ros2_control/old/: old_hk1d.ros2_control.xacro
hk1d_description/rviz/: hk1d.rviz
hk1d_description/srdf/: hk1d.srdf.xacro  hk1d_macro.srdf.xacro
hk1d_description/urdf/: hk1d.config.xacro  hk1d.urdf  hk1d.urdf.xacro
hk1d_description/urdf/old/: hk1d.urdf.xacro  hk1d_description.urdf.xacro
hk1d_fake_hardware/: CMakeLists.txt  hardware_plugin.xml  package.xml
hk1d_fake_hardware/include/hk1d_fake_hardware/: hk1d_fake_hardware.hpp
hk1d_fake_hardware/src/: hk1d_fake_hardware.cpp
hk1d_mock_component_controllers/hk1d_mock_pyrobot/: CMakeLists.txt  controller_plugin.xml  package.xml
hk1d_mock_component_controllers/hk1d_mock_pyrobot/include/hk1d_mock_pyrobot/: hk1d_mock_pyrobot.hpp  visibility_control.h
hk1d_mock_component_controllers/hk1d_mock_pyrobot/script/: hk1d_mock_pyrobot_logic_impl.py
hk1d_mock_component_controllers/hk1d_mock_pyrobot/src/: hk1d_mock_pyrobot.cpp  hk1d_mock_pyrobot_logic.pyx  hk1d_mock_pyrobot_parameters.yaml
hk1d_mock_component_controllers/hk1d_mock_pyrobot/test/: test_hk1d_mock_pyrobot.cpp  test_hk1d_mock_pyrobot.hpp  test_load_hk1d_mock_pyrobot.cpp  test_params.yaml
hk1d_mock_component_controllers/hk1d_mock_pyrobot_src/: README.md  hk1d_mock_pyrobot_logic_impl.py
hk1d_mock_component_controllers/hk1d_mock_robot/: CMakeLists.txt  hk1d_mock_robot.xml  package.xml
hk1d_mock_component_controllers/hk1d_mock_robot/include/hk1d_mock_robot/: hk1d_mock_robot.hpp  visibility_control.h
hk1d_mock_component_controllers/hk1d_mock_robot/src/: hk1d_mock_robot.cpp
hk1d_mock_robot/include/hk1d_mock_robot/: hk1d_mock_robot.hpp  visibility_control.h
hk1d_mock_robot/src/: hk1d_mock_robot.cpp  hk1d_mock_robot_parameters.yaml
